--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -48,7 +48,7 @@
         <section id="dashboard-right">
           <div id="donut-balance-container" class="card">
             <div id="donut-balance-and-icon">
-              <img src="../images/icons/ecodona_icon.svg" />
+              <img src="../images/icons/ecodona_icon.svg" alt="pic"/>
               <h4 id="donut-balance"></h4>
             </div>
             <h6>Donut Balance</h6>
@@ -68,32 +68,32 @@
                 <div class="leaderboard_num">
                   <p class="body1">1</p>
                   <p class="body1">Brendan</p>
-                  <img src="../images/icons/ecodona_icon.svg" />
-                  <p class="body1">200,000,000</p>
+                  <img src="../images/icons/ecodona_icon.svg"alt="pic" />
+                  <p class="body1">124,564</p>
                 </div>
               </li>
               <li>
                 <div class="leaderboard_num">
                   <p class="body1">2</p>
-                  <p class="body1">Hanna</p>
-                  <img src="../images/icons/ecodona_icon.svg" />
-                  <p class="body1">124,561</p>
+                  <p class="body1">Hanna529</p>
+                  <img src="../images/icons/ecodona_icon.svg" alt="pic"/>
+                  <p class="body1">124,563</p>
                 </div>
               </li>
               <li>
                 <div class="leaderboard_num">
                   <p class="body1">3</p>
-                  <p class="body1">Brendan</p>
-                  <img src="../images/icons/ecodona_icon.svg" />
-                  <p class="body1">90,878</p>
+                  <p class="body1">Helennnn </p>
+                  <img src="../images/icons/ecodona_icon.svg" alt="pic"/>
+                  <p class="body1">124,562</p>
                 </div>
               </li>
               <li>
                 <div class="leaderboard_num">
                   <p class="body1">4</p>
-                  <p class="body1">Chelsea</p>
-                  <img src="../images/icons/ecodona_icon.svg" />
-                  <p class="body1">50,889</p>
+                  <p class="body1">Chelsea72</p>
+                  <img src="../images/icons/ecodona_icon.svg" alt="pic"/>
+                  <p class="body1">124,561</p>
                 </div>
               </li>
             </ul>
