--- a/pages/upload.html
+++ b/pages/upload.html
@@ -44,11 +44,16 @@
     <h3>Upload Your Receipt</h3>
     <div class="upload-wrapper">
       <img src="../images/icons/upload-icon.png">
+      <div class="f1">
+        <input type="file" accept="application/pdf">
+      </div>
       <p class="body2">We only accept files of the .pdf format.</p>
-      <a href="congratulations.html">
-        <button type="button" class="secondaryblk">Upload</button>
-      </a>
-      <input type="file" accept="application/pdf">
+      <div class="f2">
+        <a href="congratulations.html">
+          <button type="button" class="primaryblk">Upload</button>
+        </a>
+      </div>
+     
     </div>
   </section>
 
